// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts a style prop 1`] = `
<View
  style={
    {
      "flex": 1,
      "margin": 10,
    }
  }
/>
`;

exports[`doesn't pass \`theme\` property to the child by default but passes to the style callback 1`] = `
<View
  style={
    {
      "color": "#193bc3",
    }
  }
/>
`;

exports[`passes \`theme\` property if \`omitProps\` specified without it 1`] = `
<View
  style={
    {
      "color": "#193bc3",
    }
  }
  theme={
    {
      "fancyColor": "#193bc3",
    }
  }
/>
`;
